--- a/static/user.html
+++ b/static/user.html
@@ -27,6 +27,8 @@
         .form-group label { display: block; margin-bottom: 8px; font-weight: 600; color: var(--gray-600); }
         .form-group input { width: 100%; padding: 12px; border: 2px solid var(--gray-200); border-radius: 8px; font-size: 14px; transition: border-color 0.2s; }
         .form-group input:focus { outline: none; border-color: var(--primary); }
+        .form-group select { width: 100%; padding: 24px 12px; border: 2px solid var(--gray-200); border-radius: 8px; font-size: 14px; transition: border-color 0.2s; }
+        .form-group select:focus { outline: none; border-color: var(--primary); }
         .btn { display: inline-block; padding: 12px 24px; background: var(--primary); color: var(--white); border: none; border-radius: 8px; cursor: pointer; font-size: 14px; font-weight: 600; transition: all 0.2s; text-align: center; }
         .btn:hover { background: var(--primary-dark); transform: translateY(-1px); }
         .btn-danger { background: var(--danger); }
