--- a/static/admin.html
+++ b/static/admin.html
@@ -325,6 +325,7 @@
             display: flex;
             gap: 8px;
             flex-wrap: wrap;
+            align-items: center;
         }
         
         .btn-small {
@@ -1191,6 +1192,7 @@
                                         <button class="btn btn-small btn-secondary" onclick="testAgent('${tenant.tenant}', '${agent}')">Test</button>
                                         <button class="btn btn-small btn-warning" onclick="uploadFiles('${tenant.tenant}', '${agent}')">Upload</button>
                                         <button class="btn btn-small btn-outline" onclick="getEmbedCode('${tenant.tenant}', '${agent}')">Embed</button>
+                                        <button class="btn btn-small btn-danger" onclick="deleteAgent('${tenant.tenant}', '${agent}')">Delete</button>
                                     </div>
                                 </div>
                             `).join('')}
@@ -1859,6 +1861,27 @@
                 }
             } catch (error) {
                 console.error('Failed to delete user:', error);
+            }
+        }
+
+        async function deleteAgent(tenant, agent) {
+            if (!confirm(`Are you sure you want to delete agent "${agent}"?`)) return;
+
+            try {
+                const response = await fetch(`${API_BASE}/agents/${tenant}/${agent}`, {
+                    method: 'DELETE',
+                    headers: { 'Authorization': `Bearer ${authToken}` }
+                });
+
+                if (response.ok) {
+                    loadTenants();
+                    showSuccess('Agent deleted successfully!');
+                } else {
+                    const err = await response.json();
+                    alert(err.detail || 'Failed to delete agent');
+                }
+            } catch (error) {
+                console.error('Failed to delete agent:', error);
             }
         }
 
