--- a/static/user.html
+++ b/static/user.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RAG Chatbot</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&display=swap">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
@@ -17,8 +18,18 @@
             --white: #ffffff;
             --shadow: 0 2px 4px rgba(0,0,0,0.1);
             --shadow-lg: 0 4px 12px rgba(0,0,0,0.15);
+            --body-font-size: 16px;
         }
-        body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif; background: var(--gray-100); color: var(--gray-800); line-height: 1.6; }
+        body {
+            font-family: 'Inter', sans-serif;
+            background: var(--gray-100);
+            color: var(--gray-800);
+            line-height: 1.6;
+            font-size: var(--body-font-size);
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Spectral', serif;
+        }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
         .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), #4CAF50); }
         .login-box { background: var(--white); padding: 40px; border-radius: 12px; box-shadow: var(--shadow-lg); width: 100%; max-width: 400px; }
@@ -200,6 +211,13 @@
 const API_BASE = '';
 let authToken = localStorage.getItem('rag_auth_token');
 let currentUser = null;
+let bodyFontSize = parseInt(localStorage.getItem('body_font_size')) || 16;
+
+function applyBodyFontSize() {
+    document.documentElement.style.setProperty('--body-font-size', bodyFontSize + 'px');
+}
+
+applyBodyFontSize();
 
 if(authToken){
     validateToken();
