--- a/static/admin.html
+++ b/static/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAG Chatbot Administration</title>
+    <title>Second Chair Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&display=swap">
     <style>
         * {
@@ -13,8 +13,8 @@
         }
         
         :root {
-            --primary: #1E88E5;
-            --primary-dark: #1976D2;
+            --primary: #871c1c;
+            --primary-dark: #561212;
             --secondary: #4CAF50;
             --danger: #f44336;
             --warning: #FF9800;
@@ -53,7 +53,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
         }
         
         .login-box {
@@ -509,7 +509,7 @@
     <!-- Login Page -->
     <div id="loginPage" class="login-container">
         <div class="login-box">
-            <h2>RAG Chatbot Admin</h2>
+            <h2>Second Chair Login</h2>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="username">Username</label>
