--- a/static/user.html
+++ b/static/user.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAG Chatbot</title>
+    <title>Second Chair Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&display=swap">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #1E88E5;
-            --primary-dark: #1976D2;
+            --primary: #871c1c;
+            --primary-dark: #561212;
             --danger: #f44336;
             --gray-100: #f5f5f5;
             --gray-200: #e0e0e0;
@@ -31,7 +31,7 @@
             font-family: 'Spectral', serif;
         }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), #4CAF50); }
+        .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); }
         .login-box { background: var(--white); padding: 40px; border-radius: 12px; box-shadow: var(--shadow-lg); width: 100%; max-width: 400px; }
         .login-box h2 { text-align: center; margin-bottom: 30px; color: var(--gray-800); }
         .form-group { margin-bottom: 20px; }
@@ -107,7 +107,7 @@
 <body>
     <div id="loginPage" class="login-container">
         <div class="login-box">
-            <h2>RAG Chatbot Login</h2>
+            <h2>Second Chair Login</h2>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="username">Username</label>
