--- a/static/admin.html
+++ b/static/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Chair Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&family=Satoshi:wght@400;700&display=swap">
     <style>
         * {
             margin: 0;
@@ -53,7 +53,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            background: #000;
         }
         
         .login-box {
@@ -68,7 +68,11 @@
         .login-box h2 {
             text-align: center;
             margin-bottom: 30px;
-            color: var(--gray-800);
+            font-family: 'Satoshi', sans-serif;
+            font-size: 125%;
+            background: linear-gradient(90deg, rgb(8, 131, 253) 0%, rgb(35, 137, 253) 0%, rgb(140, 209, 251) 100%);
+            -webkit-background-clip: text;
+            color: transparent;
         }
         
         .form-group {
