--- a/static/admin.html
+++ b/static/admin.html
@@ -706,6 +706,15 @@
                         <option value="admin">Admin</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="newUserLanguage">Language</label>
+                    <select id="newUserLanguage" name="language">
+                        <option value="English">English</option>
+                        <option value="Spanish">Spanish</option>
+                        <option value="French">French</option>
+                        <option value="German">German</option>
+                    </select>
+                </div>
                 <div class="checkbox-group">
                     <input type="checkbox" id="newUserFiles" name="allow_files">
                     <label for="newUserFiles">File Permissions</label>
@@ -1770,7 +1779,8 @@
                 agents: [formData.get('agent')],
                 role: formData.get('role'),
                 disabled: false,
-                allow_files: formData.get('allow_files') === 'on'
+                allow_files: formData.get('allow_files') === 'on',
+                language: formData.get('language')
             };
 
             try {
