--- a/static/admin.html
+++ b/static/admin.html
@@ -711,8 +711,18 @@
                     <select id="newUserLanguage" name="language">
                         <option value="English">English</option>
                         <option value="Spanish">Spanish</option>
+                        <option value="Chinese (Simplified)">Chinese (Simplified)</option>
+                        <option value="Korean">Korean</option>
+                        <option value="Arabic">Arabic</option>
+                        <option value="Hindi">Hindi</option>
+                        <option value="Japanese">Japanese</option>
                         <option value="French">French</option>
                         <option value="German">German</option>
+                        <option value="Portuguese (Brazil)">Portuguese (Brazil)</option>
+                        <option value="Italian">Italian</option>
+                        <option value="Bengali">Bengali</option>
+                        <option value="Indonesian">Indonesian</option>
+                        <option value="Swahili">Swahili</option>
                     </select>
                 </div>
                 <div class="checkbox-group">
